ID-347 Fixed lighthouse contrast fails in bootstrap

--- a/less/bootstrap-fixes.less
+++ b/less/bootstrap-fixes.less
@@ -214,3 +214,29 @@ label.checkbox, label.radio, label.checkbox-inline, label.radio-inline {
 .popover button.close {
   opacity: 1;
 }
+
+/* Contrast fixes ID-347 */
+
+blockquote small {
+  color: @text-muted;
+}
+
+.help-block {
+  color: darken(@text-muted, 10%);
+}
+
+.nav > li.disabled > a, .pager .disabled > a {
+  color: @text-muted;
+}
+
+.breadcrumb > .active {
+  color: darken(@text-muted, 10%);
+}
+
+.badge {
+  background-color: @text-muted;
+}
+
+.panel-warning > .panel-heading {
+  color: darken(@brand-warning, 10%);
+}
