--- a/less/variables.less
+++ b/less/variables.less
@@ -145,7 +145,7 @@
 @brand-primary: #204f79;
 @brand-success: #596e31;
 @brand-info: #1d817a;
-@brand-warning: lighten(@id7-brand-orange, 10%);
+@brand-warning: @id7-brand-orange;
 @brand-danger: #af2723;
 
 @state-success-text: darken(@brand-success, 10%);
